--- a/sass/utils/_animation.scss
+++ b/sass/utils/_animation.scss
@@ -27,8 +27,10 @@
 }
 
 @keyframes loader{
+    0%{
+        display: block;
+    }
     20%{
-        display: initial;
         opacity: 1;
     }
     40%{
